--- a/Bump/Bump/Languages/MLResource.ar.resx
+++ b/Bump/Bump/Languages/MLResource.ar.resx
@@ -120,7 +120,7 @@
   <data name="About" xml:space="preserve">
     <value>حول</value>
   </data>
-  <data name="Back_ Home" xml:space="preserve">
+  <data name="Back_Home" xml:space="preserve">
     <value> العودة للصفحة الرئيسية </value>
   </data>
   <data name="BUMP" xml:space="preserve">
@@ -149,6 +149,9 @@
   </data>
   <data name="First_Name" xml:space="preserve">
     <value>الاسم الاول </value>
+  </data>
+  <data name="follow" xml:space="preserve">
+    <value>يمكنك متابعتنا</value>
   </data>
   <data name="Forget_Password" xml:space="preserve">
     <value>هل نسيت كلمة المرور ؟</value>
@@ -195,7 +198,7 @@
   <data name="notification" xml:space="preserve">
     <value>المطب  على بعد 50 مترًا من المكان الذي تقف فيه</value>
   </data>
-  <data name="Our_ Program" xml:space="preserve">
+  <data name="Our_Program" xml:space="preserve">
     <value>حول البرنامج </value>
   </data>
   <data name="Our_Team" xml:space="preserve">
@@ -212,6 +215,9 @@
   </data>
   <data name="prog_B" xml:space="preserve">
     <value>من خلال التطبيق ، يمكنك تحديد ما يهمك أكثر كسائق على الطريق ، مثل المطبات القريبة ، أو رادار السرعة ، أو الحفر الجديدة ، وتحديد موقع أقرب محطة وقود لتجنب نفاد الوقود في أي وقت.</value>
+  </data>
+  <data name="quote" xml:space="preserve">
+    <value>يمكننا وحدنا فعل القليل , معا يمكننا ان نفعل الكثير</value>
   </data>
   <data name="Raghad" xml:space="preserve">
     <value>رغد خالد الخطيب </value>
