--- a/Bump/Bump/Languages/MLResource.ar.resx
+++ b/Bump/Bump/Languages/MLResource.ar.resx
@@ -147,8 +147,14 @@
   <data name="Email" xml:space="preserve">
     <value>البريد الكتروني </value>
   </data>
+  <data name="EmailSend" xml:space="preserve">
+    <value>تم ارسال الرسالة بنجاح، يرجى التحقق من بريدك الالكتروني</value>
+  </data>
   <data name="Email_Username" xml:space="preserve">
     <value>اسم المستخدم</value>
+  </data>
+  <data name="ErrorOccure" xml:space="preserve">
+    <value>حدث خطأ ما، يرجى المحاولة في وقت لاحق</value>
   </data>
   <data name="FailedSetDanger" xml:space="preserve">
     <value>حدث خطاء ما, يرجى في وقت لاحق</value>
@@ -173,6 +179,9 @@
   </data>
   <data name="Invite_friend" xml:space="preserve">
     <value>ادع صديق</value>
+  </data>
+  <data name="IsStillExists" xml:space="preserve">
+    <value>هل مازال موجودا؟</value>
   </data>
   <data name="Join_us" xml:space="preserve">
     <value>انضم لنا </value>
@@ -234,6 +243,9 @@
   <data name="Remember_me" xml:space="preserve">
     <value>تذكرني</value>
   </data>
+  <data name="Remove" xml:space="preserve">
+    <value>أزالة</value>
+  </data>
   <data name="Reset_Password" xml:space="preserve">
     <value>إعادة تعين كلمة المرور</value>
   </data>
@@ -264,6 +276,9 @@
   <data name="Subject" xml:space="preserve">
     <value>الموضوع</value>
   </data>
+  <data name="SuccessedRemovedDanger" xml:space="preserve">
+    <value>تم ازالة هذه الخطر من قاعدة البيانات الخاصة بنا, شكرا على تعاونك</value>
+  </data>
   <data name="SuccessedSetDanger" xml:space="preserve">
     <value>تم حفظ موقع الخطر بنجاح, شكرا لك</value>
   </data>
@@ -278,5 +293,8 @@
   </data>
   <data name="use_B" xml:space="preserve">
     <value>يمكنك مساعدتنا والمساهمة في البحث وإدخال موقع كل شيء في الطريق ، يجب عليك التسجيل للقيام بذلك.</value>
+  </data>
+  <data name="Yes" xml:space="preserve">
+    <value>نعم</value>
   </data>
 </root>
