--- a/Bump/Bump/Languages/MLResource.ar.resx
+++ b/Bump/Bump/Languages/MLResource.ar.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="About" xml:space="preserve">
-    <value>حول</value>
+    <value>نبذة عن التطبيق</value>
   </data>
   <data name="Back_Home" xml:space="preserve">
     <value> العودة للصفحة الرئيسية </value>
@@ -239,6 +239,9 @@
   </data>
   <data name="Raghad" xml:space="preserve">
     <value>رغد خالد الخطيب </value>
+  </data>
+  <data name="Register" xml:space="preserve">
+    <value>تسجيل الدخول</value>
   </data>
   <data name="Remember_me" xml:space="preserve">
     <value>تذكرني</value>
