--- a/Bump/Bump/Languages/MLResource.resx
+++ b/Bump/Bump/Languages/MLResource.resx
@@ -240,6 +240,9 @@
   <data name="Raghad" xml:space="preserve">
     <value>Raghad AL-khateeb</value>
   </data>
+  <data name="Register" xml:space="preserve">
+    <value>Rigister</value>
+  </data>
   <data name="Remember_me" xml:space="preserve">
     <value>Remember me</value>
   </data>
