--- a/Bump/Bump/Languages/MLResource.resx
+++ b/Bump/Bump/Languages/MLResource.resx
@@ -241,7 +241,7 @@
     <value>Raghad AL-khateeb</value>
   </data>
   <data name="Register" xml:space="preserve">
-    <value>Rigister</value>
+    <value>Register</value>
   </data>
   <data name="Remember_me" xml:space="preserve">
     <value>Remember me</value>
