-fix bug in calcuate distance

--- a/Bump/Bump/Languages/MLResource.ar.resx
+++ b/Bump/Bump/Languages/MLResource.ar.resx
@@ -127,7 +127,7 @@
     <value>مطب</value>
   </data>
   <data name="BumpAlert" xml:space="preserve">
-    <value>إنتبه، أمامك مَطَبْ على بعد نصف كيلو متر</value>
+    <value>إنتبه، أمامك مَطَبْ على بعد {0} متر</value>
   </data>
   <data name="Confirm_Password" xml:space="preserve">
     <value>تأكيد كلمة المرور</value>
@@ -226,7 +226,7 @@
     <value>أدخل البريد الإلكتروني الخاص بك ,  وسنرسل بريدًا إلكترونيًا يحتوي على تعليمات لإعادة تعيين كلمة المرور الخاصة بك.</value>
   </data>
   <data name="PitAlert" xml:space="preserve">
-    <value>كن حذرًا ، هناك أعمال انشائية أمامك على بعد نصف كيلومتر</value>
+    <value>كن حذرًا ، هناك أعمال انشائية أمامك على بعد  {0} متر</value>
   </data>
   <data name="prog_A" xml:space="preserve">
     <value>الهدف هو الحفاظ على سلامتك وسلامة السيارة على الطريق .</value>
@@ -274,7 +274,7 @@
     <value>تسجيل الدخول بواسطة مواقع التواصل الاجتماعي </value>
   </data>
   <data name="SpeedAlert" xml:space="preserve">
-    <value>قم بتخفيض سرعتك الان، امامك رادار على بعد نصف كيلو متر</value>
+    <value>قم بتخفيض سرعتك الان، امامك رادار على بعد  {0} متر</value>
   </data>
   <data name="Subject" xml:space="preserve">
     <value>الموضوع</value>
